# scrabble

./: .clangd  Makefile  README.md  plan.md  static_config.yaml  tmp.txt
diagrams/: class.puml
dictionary/: parse1.py
docker/: Dockerfile  Dockerfile.dev  compose_docker_for_dir.sh  docker-compose-dev.yml  docker-compose-main.yml  docker-compose.yml  sql_create_table.sh
frontend/: game_list.html  game_room.html  styles.css
frontend/js/: api.js  game_room.js  games.js  login.js
sqlite/: users_1.sql
src/: CMakeLists.txt  api_description.md  example.jsonc  example_game_status.jsonc  main.cpp  plan.md
src/api/: Cors.cpp  Cors.hpp  README.md  handlers.hpp  http.cpp  http_handlers.hpp  sqlite.cpp  websocket.cpp  websocket.hpp
src/frontend/: game_room.html  game_room_old.html  index.html  profile.html
src/frontend/js/: games.js  register.js  user_info.js
src/game/: GameViewBuilder.cpp  GameViewBuilder.hpp  Player.hpp  ScrabbleGame.cpp  ScrabbleGame.hpp  Storage.cpp  Storage.hpp
src/python/: bag_forming.py
src/session/: GameRoom.cpp  GameRoom.hpp  GameStorage.cpp  GameStorage.hpp  PlayerSession.cpp  PlayerSession.hpp
src/sqlite/: users_1.sql
src/test/async_test/: CMakeLists.txt  Makefile  Notifier.cpp  Notifier.hpp  README.md  main.cpp  static_config.yaml  websocket.cpp  websocket.hpp
src/test/cpp_storage_test/: .clang-format  CMakeLists.txt  ScrabbleGame.cpp  ScrabbleGame.hpp  compile_commands.json  curl.sh  handlers.hpp  http.cpp  main.cpp  notes.md  static_config.yaml
src/test/json_test/: test.cpp
src/test/scrabble_game/: main.cpp  tests.txt
src/userver/: CMakeLists.txt  Cors.cpp  Cors.hpp  Findsodium.cmake  ScrabbleGame.cpp  ScrabbleGame.hpp  example_for_scrabble.json  handlers.hpp  http.cpp  main.cpp  plan.md  redis.cpp  sqlite.cpp  utils.hpp  websocket.cpp  websocket.hpp
src/userver/test/scrabble_game/: ScrabbleGame.hpp
src/utils/: utils.hpp
tests/: conftest.py  test_api.py
